--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,9 @@ lazy-object-proxy==1.4.3
 mccabe==0.6.1
 pycodestyle==2.5.0
 pylint==2.4.4
-PyQt5==5.14.1
-PyQt5-sip==12.7.0
+PyQt5==5.15.10
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.13.0
 six==1.14.0
-typed-ast==1.4.1
+typed-ast==1.5.5
 wrapt==1.11.2
